methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  avance()
  if (!estFaceMur()){
    avance()
    if (getCouleurSol() == Color.green) {
      recule()
    }
  } else {
    return false
  }
}